# clash-flash

./: clash-flash-界面功能设计.md  index.html  package-lock.json  package.json  开发计划.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clash.rs  clash_api.rs  commands.rs  db.rs  lib.rs  main.rs  subscription.rs
src/api/: index.ts
src/components/layout/: BottomBar.tsx  MainLayout.tsx  TopBar.tsx
src/components/ui/: Button.tsx
src/pages/: Home.tsx  Onboarding.tsx  Settings.tsx
src/store/: index.ts
src/types/: index.ts
