[package]
name = "clash-flash"
version = "0.1.0"
description = "A simple and fast VPN client based on Clash"
authors = ["you"]
edition = "2021"

[lib]
name = "clash_flash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
dirs = "6"
once_cell = "1.20"
base64 = "0.22"
serde_yaml = "0.9"
urlencoding = "2.1"
